Fix z-index of filters table bulk action selector

--- a/src/app/shared/components/filter-table/filter-table.component.scss
+++ b/src/app/shared/components/filter-table/filter-table.component.scss
@@ -145,6 +145,7 @@
         padding: 12px;
         width: 500px;
         background: rgba(51, 51, 51, 0.8);
+        z-index: 1;
 
         .number {
           margin-left: auto;
